Ticket reservation improvement
* Ticket model and schema - changed user_id column on profile_id. Now ticket belongs to profile, not to user.

* User model - changed profiles dependent :delete_all on :destroy (to run necessary callbacks). Added #tickets to get all tickets of all user profiles.

* Profile model - has_many :tickets.

* TicketsController - implemented #index method. Changed #create method - now user able to reserve several seats. Changed tickets_params schema.

* TicketPolicy - added #index? and overrided #owned_by_user? method.

* Tickets::CreatorService - refactored service for handling multiple seats reservation.

* tests - covered the above changes with tests.

* docs - generated new docs with rswag.
