# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.0].define(version: 2023_04_03_184617) do
+ActiveRecord::Schema[7.0].define(version: 2023_04_27_134707) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -102,12 +102,12 @@ ActiveRecord::Schema[7.0].define(version: 2023_04_03_184617) do
 
   create_table "tickets", force: :cascade do |t|
     t.float "price"
-    t.integer "user_id", null: false
     t.integer "seat_id", null: false
     t.integer "arrival_station_id", null: false
     t.integer "departure_station_id", null: false
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.integer "profile_id", null: false
   end
 
   create_table "trains", force: :cascade do |t|
@@ -135,9 +135,9 @@ ActiveRecord::Schema[7.0].define(version: 2023_04_03_184617) do
   add_foreign_key "seats", "carriages"
   add_foreign_key "station_order_numbers", "routes"
   add_foreign_key "station_order_numbers", "stations"
+  add_foreign_key "tickets", "profiles"
   add_foreign_key "tickets", "seats"
   add_foreign_key "tickets", "stations", column: "arrival_station_id"
   add_foreign_key "tickets", "stations", column: "departure_station_id"
-  add_foreign_key "tickets", "users"
   add_foreign_key "trains", "routes"
 end
